feat(alert): ✨ 重构告警模块并新增DTO/VO体系
本次提交对告警模块进行了全面重构，主要变更包括：
1. 增加ClusterAlertRuleDTO/VO和ClusterAlertHistoryDTO/VO数据传输对象
2. 实现基于MapStruct的DTO/Entity/VO转换器
3. Controller层统一使用DTO/VO进行数据交互
4. Service层处理业务逻辑和数据转换
5. 完善了告警历史和告警规则的CRUD接口
6. 优化了Mapper层的方法命名和查询逻辑

这些改进使得代码结构更清晰，数据层与业务层分离，提高了系统的可维护性和扩展性。同时统一的DTO/VO体系为前后端交互提供了标准数据格式。

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>